+Теперь изображение сохраняется в корректном Base64 формате